--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,6 +6,6 @@
 .home-cards {
   min-height: 100vh;
   display: grid;
-  grid-template-rows: repeat(3, 33.33%);
+  grid-template-rows: (1fr 1fr 1fr);
   grid-template-columns: 1fr;
 }
